--- a/index.css
+++ b/index.css
@@ -76,7 +76,6 @@ html {
     scroll-snap-align: start;
     min-height: 100vh;
     width: 100%;
-    border-top: 1px solid black;
 }
 
 
@@ -210,6 +209,7 @@ html {
 }
 
 nav {
+    position: sticky;
     top: 0px;
     display: flex;
     justify-content: flex-end;
@@ -218,19 +218,9 @@ nav {
     color: white;
     z-index: 999999;
     overflow: hidden !important;
-    background-color: #101010;
+    background-color: #101010 !important;
 }
 
-/* .line {
-    width: 10px;
-    height: 10px;
-    background-color: white;
-} */
-
-.sticky {
-    position: sticky;
-    top: 0px;
-}
 
 nav ul {
     display: flex;
@@ -241,6 +231,45 @@ nav li {
     list-style: none;
     margin-left: 40px;
 }
+
+nav .nav-a {
+    text-decoration: none;
+    color: white;
+    position: relative;
+}
+
+nav:hover {
+    cursor: auto;
+}
+
+.nav-a::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: rgb(11, 228, 11);
+    position: absolute;
+    top: 19px;
+    left: 0px;
+    display: none;
+    z-index: 999999;
+}
+
+
+.nav-a:hover::after {
+    content: '';
+    /* width: 100% !important; */
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    top: 19px;
+    left: 0px;
+    display: block;
+    animation: slidenav 0.6s ease-in-out;
+    z-index: 999999;
+}
+
+
+
 
 
 /*/////////////////////////////A PROPOS/////////////////////////////////////*/
@@ -990,6 +1019,16 @@ dialog * {
     }
 }
 
+@keyframes slidenav {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
 
 
 @media screen and (max-width:1400px) {
@@ -1036,6 +1075,10 @@ dialog * {
 
 
 @media screen and (max-width:765px) {
+
+    #cursor {
+        display: none;
+    }
 
     .timeline {
         height: 1200px;
