--- a/index.css
+++ b/index.css
@@ -97,6 +97,39 @@ html {
     border: 1px solid #E1C118;
 }
 
+
+hr {
+    margin: 0 !important;
+    opacity: 1 !important;
+}
+
+
+
+h2 {
+    font-size: 23px !important;
+}
+
+a:hover {
+    color: white !important;
+}
+
+/* .modal:hover {
+    cursor: initial !important;
+} */
+
+.cursor {
+    z-index: 9999 !important;
+}
+
+.modal {
+    z-index: 99 !important;
+    /* top: 50px !important; */
+}
+
+.modal-backdrop {
+    z-index: 98 !important;
+}
+
 /*/////////////////////////////PAGE 1/////////////////////////////////////*/
 
 
@@ -158,38 +191,43 @@ html {
     margin-top: 15px;
 }
 
+
 .hr-bas-gauche-haut {
-    position: absolute;
-    bottom: 120px;
-    left: 34px;
-    height: 80px;
-    border: 1px solid #E1C118;
+    position: absolute !important;
+    bottom: 120px !important;
+    left: 34px !important;
+    height: 80px !important;
+    border: 1px solid #E1C118 !important;
+    opacity: 1 !important;
 }
 
 .hr-bas-gauche-droite {
-    position: absolute;
-    bottom: -5px;
-    transform: rotate(90deg);
-    left: 110px;
-    height: 80px;
-    border: 1px solid #E1C118;
+    position: absolute !important;
+    bottom: -5px !important;
+    transform: rotate(90deg) !important;
+    left: 110px !important;
+    height: 80px !important;
+    border: 1px solid #E1C118 !important;
+    opacity: 1 !important;
 }
 
 .hr-haut-droite-bas {
-    position: absolute;
-    top: 55px;
-    right: 30px;
-    height: 80px;
-    border: 1px solid #E1C118;
+    position: absolute !important;
+    top: 55px !important;
+    right: 30px !important;
+    height: 80px !important;
+    border: 1px solid #E1C118 !important;
+    opacity: 1 !important;
 }
 
 .hr-haut-droite-gauche {
-    position: absolute;
-    transform: rotate(90deg);
-    top: -10px;
-    right: 104px;
-    height: 80px;
-    border: 1px solid #E1C118;
+    position: absolute !important;
+    transform: rotate(90deg) !important;
+    top: -10px !important;
+    right: 104px !important;
+    height: 80px !important;
+    border: 1px solid #E1C118 !important;
+    opacity: 1 !important;
 }
 
 .author {
@@ -216,7 +254,7 @@ nav {
     padding: 10px;
     border: 1px solid white;
     color: white;
-    z-index: 999999;
+    z-index: 97;
     overflow: hidden !important;
     background-color: #101010 !important;
 }
@@ -224,6 +262,7 @@ nav {
 
 nav ul {
     display: flex;
+    margin-bottom: 0px !important;
 }
 
 
@@ -236,6 +275,11 @@ nav .nav-a {
     text-decoration: none;
     color: white;
     position: relative;
+    font-family: 'Arya', sans-serif;
+}
+
+.right-item {
+    margin-right: 20px;
 }
 
 nav:hover {
@@ -248,7 +292,7 @@ nav:hover {
     height: 2px;
     background-color: rgb(11, 228, 11);
     position: absolute;
-    top: 19px;
+    top: 24px;
     left: 0px;
     display: none;
     z-index: 999999;
@@ -261,7 +305,7 @@ nav:hover {
     height: 2px;
     background-color: white;
     position: absolute;
-    top: 19px;
+    top: 24px;
     left: 0px;
     display: block;
     animation: slidenav 0.6s ease-in-out;
@@ -402,16 +446,25 @@ nav:hover {
 }
 
 .timeline hr {
-    width: 95%;
-    margin-left: 5%;
-    margin-top: 500px;
+    width: 95% !important;
+    margin-left: 5% !important;
+    /* margin-top: 420px !important; */
     /* transform: rotate(90deg); */
-    border: 1 px solid white;
+    border: 1.5px solid white;
+    background-color: white !important;
 }
 
 .timeline span {
     color: #E1C118;
     font-weight: bold;
+}
+
+.line {
+    background-color: rgb(255, 255, 255);
+    margin-left: 5% !important;
+    width: 95%;
+    height: 2px;
+    margin-top: 400px;
 }
 
 .dot {
@@ -858,23 +911,46 @@ nav:hover {
     color: black;
 }
 
-dialog {
-    padding: 1em;
-    max-width: 50ch;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    cursor: auto;
+.modal-choix-container {
+    display: flex;
+    justify-content: space-around;
+    /* background-color: red; */
 }
 
-dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
+.modal-choix {
+    width: 20%;
+    border: 1px solid #E1C118;
+    color: rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-dialog * {
-    margin: 0 0 0.5em 0;
+.modal-choix:hover {
+    cursor: pointer;
 }
 
+.modal-choix h3 {
+    font-size: 15px;
+    margin: 5px;
+}
+
+.modal-choix1-g {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.contenu-modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* background-color: red; */
+    margin-top: 50px;
+}
+
+.modal-choix-contenu-g {
+    display: none;
+}
 
 
 /*/////////////////////////////VEILLE/////////////////////////////////////*/
@@ -999,6 +1075,10 @@ dialog * {
     animation: slide 0.5s ease-in-out !important;
 }
 
+.contact h4 {
+    font-size: 15px !important;
+}
+
 @keyframes slide {
     0% {
         width: 0%;
@@ -1084,14 +1164,13 @@ dialog * {
         height: 1200px;
     }
 
-    .timeline hr {
-        position: absolute;
-        left: -450px;
-        top: 100px;
-        width: 1000px;
-        margin-top: 500px;
+    .line {
         transform: rotate(90deg);
-        border: 1 px solid white;
+        position: absolute;
+        left: -446px;
+        top: 600px;
+        width: 1000px;
+        margin-top: 0px;
     }
 
 
@@ -1150,6 +1229,19 @@ dialog * {
         aspect-ratio: 1/1;
         max-width: 200px;
         max-height: 200px;
+    }
+
+    .modal {
+        top: 0px !important;
+    }
+
+    .modal-choix-container {
+        flex-direction: column;
+    }
+
+    .modal-choix {
+        width: 100%;
+        margin-top: 10px;
     }
 
 }
