--- a/index.css
+++ b/index.css
@@ -130,6 +130,67 @@ a:hover {
     z-index: 98 !important;
 }
 
+.modal-footer {
+    border: none !important;
+}
+
+.carousel-control-next span,
+.carousel-control-prev span {
+    background-color: black;
+    filter: invert(1);
+    border-radius: 50px;
+    border: 1px solid white;
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.651);
+}
+
+
+.mobile-nav {
+    display: none;
+}
+
+#close {
+    display: none;
+}
+
+.mobile-menu {
+    display: none;
+    padding-top: 50px;
+    animation: mobile 0.5s ease-in-out;
+}
+
+.mobile-navlist-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.mobile-navlist-container ul {
+    list-style: none;
+}
+
+.mobile-navlist-container a {
+    color: white;
+    font-size: 30px;
+    text-decoration: none;
+    font-weight: bold;
+    display: block;
+    margin-top: 20px;
+}
+
+@keyframes mobile {
+    0% {
+        transform: translateY(-400%);
+    }
+
+    100% {
+        transform: translateY(-100%);
+    }
+}
+
 /*/////////////////////////////PAGE 1/////////////////////////////////////*/
 
 
@@ -1030,10 +1091,30 @@ nav:hover {
 .block {
     background-color: white;
     width: 31%;
+    position: relative;
     height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+}
+
+.veille-contenu span {
+    font-size: 30px;
+    font-weight: 200;
+}
+
+.veille-contenu a:hover {
+    color: blue !important;
+}
+
+.veille-contenu strong {
+    font-weight: 600;
+}
+
+
+.veille-contenu p {
+    line-height: 30px;
 }
 
 .block:hover {
@@ -1042,6 +1123,98 @@ nav:hover {
 
 .block h3 {
     color: black;
+}
+
+.block-tchilee {
+    background-image: url('images/Tchilee/accueil.png');
+}
+
+.block-garage {
+    background-image: url('images/Garage2023/login-garage.png');
+}
+
+.block-scolarite {
+    background-image: url('images/Scolarite/classes-admin-petit.png');
+}
+
+.block-server {
+    background-image: url('images/Serveur/ubuntu.png');
+}
+
+.block-bank {
+    background-image: url('images/bank-dashboard/index.png');
+}
+
+.block-PPE {
+    background-image: url('images/PPE/Accueil-petit.png');
+}
+
+.block-SkillsTouch {
+    background-image: url('images/SkillTouch/index-petit.png');
+}
+
+.block-copilot {
+    background-image: url('images/copilot/copilot.jpeg');
+}
+
+.modal-a {
+    color: black;
+    text-decoration: underline;
+}
+
+.modal-a:hover {
+    color: black !important;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.sub-block {
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    transition: all 1s;
+    backdrop-filter: blur(10px);
+}
+
+
+.sub-block h3 {
+    /* background-color: #E1C118; */
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+
+.hover-desc {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    text-align: left;
+    padding: 5px;
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.7);
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    opacity: 0;
+    transition: all 1s;
+    font-size: 15px;
+    transform: translateY(100%);
+}
+
+.block:hover .sub-block {
+    scale: 1.1;
+}
+
+.block:hover .hover-desc {
+    opacity: 1;
+    transform: translateY(0%);
 }
 
 .modal-choix-container {
@@ -1081,8 +1254,39 @@ nav:hover {
     margin-top: 50px;
 }
 
+.contenu-modal div span {
+    font-weight: 600;
+}
+
+.choix1-contenu-g {
+    /* background-color: #E1C118; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.choix1-contenu-g p {
+    /* background-color: #E1C118; */
+    max-width: 75%;
+    text-align: center;
+}
+
 .modal-choix-contenu-g {
     display: none;
+}
+
+.modal-choix-contenu-capture-g a:first-child {
+    margin-top: 0px !important;
+}
+
+.modal-choix-contenu-capture-g a {
+    display: block;
+    margin-top: 20px;
+}
+
+.modal-choix-contenu-capture-g img {
+    border: 1px solid black;
 }
 
 
@@ -1293,6 +1497,10 @@ nav:hover {
         display: none;
     }
 
+    html {
+        cursor: initial;
+    }
+
     .timeline {
         height: 1200px;
     }
@@ -1375,6 +1583,15 @@ nav:hover {
     .modal-choix {
         width: 100%;
         margin-top: 10px;
+    }
+
+    .projets-blocks {
+        flex-direction: column;
+    }
+
+    .block {
+        margin-top: 15px;
+        width: 100%;
     }
 
 }
@@ -1471,6 +1688,32 @@ nav:hover {
     .tchilee-bottom-text {
         font-size: 10px;
     }
+
+    .mobile-nav {
+        display: block;
+    }
+
+    nav ul li {
+        display: none;
+    }
+
+    nav {
+        padding: 1px;
+    }
+
+    .mobile-menu {
+        width: 100%;
+        height: 100vh;
+        display: none;
+        background-color: #101010;
+        z-index: 999998;
+        transform: translateY(-100%);
+    }
+
+    nav {
+        z-index: 99999999;
+    }
+
 
 }
 
