--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ html {
 }
 
 
+
 #cursor {
     width: 20px;
     height: 20px;
@@ -109,6 +110,10 @@ h2 {
     font-size: 23px !important;
 }
 
+h4 {
+    z-index: 50 !important;
+}
+
 a:hover {
     color: white !important;
 }
@@ -161,6 +166,10 @@ a:hover {
     animation: mobile 0.5s ease-in-out;
 }
 
+.mobile-menu ul {
+    padding: 0px;
+}
+
 .mobile-navlist-container {
     display: flex;
     align-items: center;
@@ -172,7 +181,7 @@ a:hover {
     list-style: none;
 }
 
-.mobile-navlist-container a {
+.mobile-navlist-container p {
     color: white;
     font-size: 30px;
     text-decoration: none;
@@ -1077,6 +1086,10 @@ nav:hover {
     display: none;
 }
 
+#blocks-certif {
+    display: none;
+}
+
 
 .projets-blocks {
     /* background-color: white; */
@@ -1097,6 +1110,21 @@ nav:hover {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+}
+
+.block-certif a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.tab-comp {
+    color: white !important;
+    text-decoration: none;
+}
+
+.tab-comp:hover {
+    text-decoration: underline;
 }
 
 .veille-contenu span {
@@ -1157,6 +1185,26 @@ nav:hover {
     background-image: url('images/copilot/copilot.jpeg');
 }
 
+.block-rtx {
+    background-image: url('images/Nvidia/rtx.png');
+}
+
+.block-droit1 {
+    background-image: url('images/droit1/fd.png');
+}
+
+.block-htmlcss {
+    background-image: url('images/Certifications/html-css.png');
+}
+
+.block-securite {
+    background-image: url('images/Certifications/securite-numerique.png');
+}
+
+.block-softskills {
+    background-image: url('images/Certifications/soft-skills.png');
+}
+
 .modal-a {
     color: black;
     text-decoration: underline;
@@ -1175,6 +1223,7 @@ nav:hover {
     height: 100%;
     transition: all 1s;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 
@@ -1187,6 +1236,7 @@ nav:hover {
     align-items: center;
     justify-content: center;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 
 .hover-desc {
@@ -1712,6 +1762,15 @@ nav:hover {
 
     nav {
         z-index: 99999999;
+    }
+
+    .modal {
+        z-index: 999999999 !important;
+        /* top: 50px !important; */
+    }
+
+    .modal-backdrop {
+        z-index: 999999998 !important;
     }
 
 
